--- a/res/layout/content_display_students_portrait.xml
+++ b/res/layout/content_display_students_portrait.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.lapharcius.randomstudent.displayStudents"
+    tools:context="com.lapharcius.randomstudent.DisplayStudents"
     tools:showIn="@layout/activity_display_students_portrait">
 
         <Spinner
@@ -39,24 +39,6 @@
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
 
-        <ListView
-            android:id="@+id/myListView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/spinner"
-            android:layout_marginBottom="40dp"
-            android:layout_marginTop="40dp"
-            android:background="@color/colorListView"
-            android:divider="?android:attr/actionModeSplitBackground"
-            android:dividerHeight="@dimen/cardview_default_radius"
-            android:fadingEdge="horizontal|vertical"
-            android:footerDividersEnabled="false"
-            android:headerDividersEnabled="false"
-            android:theme="@style/Animation.AppCompat.DropDownUp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="11dp" />
-
         <TextView
             android:id="@+id/outputText"
             android:layout_width="match_parent"
@@ -69,8 +51,7 @@
             android:id="@+id/refreshDB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/myListView"
-            android:layout_alignEnd="@id/myListView"
+            android:layout_alignTop="@id/spinner"
 
             app:backgroundTint="@color/AlbanyYellow"
             app:borderWidth="0dp"
@@ -78,22 +59,43 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/myCardView"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_alignBottom="@+id/myListView"
-            android:layout_alignParentTop="false"
-            android:layout_alignTop="@+id/myListView"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="300dp"
-            android:layout_marginStart="300dp"
             android:background="@color/colorPrimary"
             android:clipChildren="true"
             android:clipToPadding="true"
             app:cardBackgroundColor="@color/colorListView"
-            app:cardCornerRadius="500dp"
             app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true" />
+            app:cardUseCompatPadding="true">
+
+                <ListView
+                    android:id="@+id/myListView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/spinner"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@color/colorListView"
+                    android:divider="?android:attr/actionModeSplitBackground"
+                    android:dividerHeight="@dimen/cardview_default_radius"
+                    android:footerDividersEnabled="true"
+                    android:headerDividersEnabled="true"
+                    android:theme="@style/Animation.AppCompat.DropDownUp" />
+                <ImageView
+                    android:id="@+id/pointer"
+                    android:layout_width="@android:dimen/notification_large_icon_width"
+                    android:layout_height="@android:dimen/notification_large_icon_height"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_toLeftOf="@+id/myListView"
+                    android:foregroundGravity="left"
+                    android:src="@mipmap/arrowpic"
+                    android:visibility="visible" />
+
+        </android.support.v7.widget.CardView>
 
 
 </RelativeLayout>
